Clean up parquet writer redirections. Append meta data added.

--- a/dae/pytest.ini
+++ b/dae/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+addopts = -p no:django
 markers =
     gs_impala: mark test to run only for impala genotype storage
     gs_impala2: mark test to run only for impala2 genotype storage
