--- a/impala_storage/impala_storage/tests/impala1_storage.yaml
+++ b/impala_storage/impala_storage/tests/impala1_storage.yaml
@@ -1,5 +1,6 @@
 id: impala
 storage_type: impala
+read_only: false
 hdfs:
   base_dir: "/tmp/genotype_impala1_data"
   host: "localhost"
@@ -11,32 +12,3 @@ impala:
   - localhost
   port: 21050
   pool_size: 1
-
-# storages:
-#   - id: impala
-#     storage_type: impala
-#     hdfs:
-#       base_dir: "/tmp/genotype_impala_data"
-#       host: "localhost"
-#       port: 8020
-#       replication: 1
-#     impala: 
-#       db: genotype_impala_db
-#       hosts:
-#       - localhost
-#       port: 21050
-#       pool_size: 1
-
-#   - id: impala2
-#     storage_type: impala2
-#     hdfs:
-#       base_dir: "/tmp/genotype_impala2_data"
-#       host: "localhost"
-#       port: 8020
-#       replication: 1
-#     impala: 
-#       db: genotype_impala2_db
-#       hosts:
-#       - localhost
-#       port: 21050
-#       pool_size: 1
