--- a/environment.yml
+++ b/environment.yml
@@ -46,6 +46,7 @@ dependencies:
   - toolz=0.12.0
   - markdown2=2.4.0
   - python-duckdb=0.10.1
+  - duckdb-engine=0.11.2
   - sqlglot=20.4
   - polars=0.20.18
   - sentry-sdk=1.18.0
