--- a/environment.yml
+++ b/environment.yml
@@ -26,6 +26,7 @@ dependencies:
   - seaborn=0.13
   - pandas=2.1.3
   - pyarrow=14.0.1
+  - snappy=1.1.10
   - fsspec=2023.9.0
   - s3fs=2023.9
   - dask=2023.8
