--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -17,9 +17,7 @@ dependencies:
   - sphinx-copybutton=0.5.1
   - sphinxcontrib-httpdomain=1.8.1
   - coverage=7.2
-  - flake8=6.0.0
-  - flake8-quotes=3.3.2
-  - flake8-docstrings=1.7.0
+  - ruff=0.3.5
   - mypy=1.9
   - pytest=7.4
   - pytest-cov=4.1.0
