--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python==3.9
-importlib_metadata==6.8
+python==3.10
+importlib_metadata==7.1
 pysam==0.22
 htslib==1.18
 samtools==1.18
@@ -12,16 +12,17 @@ scipy==1.10.0
 scikit-learn==1.1.2
 matplotlib-base==3.5.1
 seaborn==0.13
-pandas==2.1.3
-pyarrow==14.0.1
-fsspec==2023.9.0
-s3fs==2023.9
-dask==2023.8
+pandas==2.1
+pyarrow==15.0.2
+snappy==1.1.10
+fsspec==2024.3
+s3fs==2024.3
+dask==2024.4
 python-box==7.1
 setuptools==67
 sqlalchemy==2.0.21
-sqlite==3.43
-django==4.2.7
+sqlite==3.45
+django==4.2.11
 django-cors-headers==4.0
 djangorestframework==3.14
 django-oauth-toolkit==2.2
@@ -32,7 +33,7 @@ jinja2==3.1.3
 ijson==3.2
 toolz==0.12.0
 markdown2==2.4.0
-python-duckdb==0.10
+python-duckdb==0.10.1
 sqlglot==20.4
-polars==0.19.17
+polars==0.20.18
 sentry-sdk==1.18.0
