Additional ruff configuration

--- a/ruff.toml
+++ b/ruff.toml
@@ -42,7 +42,12 @@ target-version = "py310"
 
 [lint]
 select = ["E", "F", "W", "C90", "I", "UP", "ASYNC", "S", "BLE", "FBT", "B", "A", "COM", "C4", "T10", "EXE", "ISC", "LOG", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "ARG", "PTH", "FIX", "ERA", "PD", "TRY", "PERF", "FURB", "RUF"]
-ignore = ["D105", "D107", "D417", "UP015", "UP038"]
+ignore = [
+    "D105", "D107", "D417", "UP015", "UP038", "FURB152", "PD901",
+    "UP007",  # for Python 3.9 support, remove when we drop it
+    "T201", "S101", "PTH",  # for separate tasks, fix issues and then enable these rules
+    "PT006",  # for separate task - currently we use 'csv', but maybe change to 'tuple' or 'list'?
+]
 fixable = ["ALL"]
 preview = true
 
