--- a/requirements.txt
+++ b/requirements.txt
@@ -29,11 +29,12 @@ django-oauth-toolkit==2.2
 deprecation==2.1.0
 toml==0.10.2
 cerberus==1.3.4
-jinja2==3.1.3
+jinja2==3.1.4
 ijson==3.2
 toolz==0.12.0
 markdown2==2.4.0
-python-duckdb==0.10.1
+python-duckdb==0.10.2
+duckdb-engine==0.11.2
 sqlglot==20.4
 polars==0.20.18
 sentry-sdk==1.18.0
