Source genome added to liftover annotator config.

--- a/dae/dae/tools/tests/fixtures/annotation.yaml
+++ b/dae/dae/tools/tests/fixtures/annotation.yaml
@@ -2,6 +2,7 @@
 
 - liftover_annotator:
     chain: liftover/mock
+    source_genome: genomes/mock0
     target_genome: genomes/mock
 
 - position_score:
