--- a/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
@@ -5,6 +5,7 @@
 
 - liftover_annotator:
     chain: hg38/hg38tohg19
+    source_genome: hg38/GRCh38-hg38/genome
     target_genome: hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome
 
 - position_score:
