--- a/dae/dae/annotation/tests/example_annotation.yaml
+++ b/dae/dae/annotation/tests/example_annotation.yaml
@@ -66,11 +66,13 @@
 #      internal:    yes
 - liftover_annotator:
     chain: hg38/hg38tohg19
+    source_genome: hg38/GRCh38-hg38/genome
     target_genome: hg19/genomes/GATK_ResourceBundle_5777_b37_phiX174
 
 - liftover_annotator:
     chain: hg38/hg38tohg19
-    target_genome: hg17/bla/genome
+    source_genome: hg38/GRCh38-hg38/genome
+    target_genome: hg19/bla/genome
     attributes:
     - name: liftover_annotable_hg17
       source: liftover_annotable
