--- a/dae/dae/pheno/tests/fixtures/regressions.conf
+++ b/dae/dae/pheno/tests/fixtures/regressions.conf
@@ -17,3 +17,8 @@ jitter = 0.3
 instrument_name = "i2"
 measure_name = "regressor1"
 jitter = 0.4
+
+[regression.reg5]
+instrument_name = ""
+measure_names = ["regressor2", "common_regressor"]
+jitter = 0.1
