--- a/.gitignore
+++ b/.gitignore
@@ -65,12 +65,6 @@ dae_conftests/dae_conftests/tests/fixtures/gpdb
 builds
 downloads
 results
-dae/dae/gene/tests/fixtures/datasets/f1_group/denovo-cache-phenotype.json
-dae/dae/gene/tests/fixtures/datasets/f2_group/denovo-cache-phenotype.json
-dae/dae/gene/tests/fixtures/datasets/f3_group/denovo-cache-phenotype.json
-dae/dae/gene/tests/fixtures/studies/f4_trio/denovo-cache-phenotype.json
-dae_conftests/dae_conftests/tests/fixtures/datasets/denovo-cache-phenotype.json
-dae_conftests/dae_conftests/tests/fixtures/studies/Study1/common_report.json
 common_report.json
 import
 cache
@@ -100,3 +94,4 @@ in.vcf.gz.tbi
 test.txt.gz.tbi
 monkeytype.sqlite3
 monkeytype_config.py
+denovo-cache-phenotype.json
