--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -12,10 +12,6 @@ dependencies:
   - versioneer=0.29
   - dask-kubernetes=2024.5
   - dask-jobqueue=0.8
-  - sphinx=6.1
-  - sphinx_rtd_theme=1.2
-  - sphinx-copybutton=0.5.1
-  - sphinxcontrib-httpdomain=1.8.1
   - coverage=7.5
   - ruff=0.4
   - mypy=1.10
@@ -30,16 +26,19 @@ dependencies:
   - django-stubs=4.2
   - types-pyyaml=6.0
   - types-setuptools=67
-  - types-toml=0.10.3
-  - types-python-dateutil=2.8.9
-  - types-requests=2.27.30
-  - pip=23
-  - invoke=2.1
+  - types-toml=0.10
+  - types-python-dateutil=2.8
+  - types-requests=2.27
+  - invoke=2.2
   - gitpython=3.1
-  - django-silk
+  - sphinx=7.3
+  - sphinx_rtd_theme
+  - sphinx-copybutton
+  - sphinxcontrib-httpdomain
   - monkeytype
   - parquet-tools
+  - pip
   - pip:
-    - sphinx-autorun==1.1.1
-    - rangehttpserver==1.2.0
-    - sphinxcontrib-video==0.0.1.dev3
+    - sphinx-autorun
+    - rangehttpserver
+    - sphinxcontrib-video
