--- a/requirements.txt
+++ b/requirements.txt
@@ -21,13 +21,13 @@ python-box==7.1
 setuptools==67
 sqlalchemy==2.0.21
 sqlite==3.45
-django==4.2.11
-django-cors-headers==4.0
-djangorestframework==3.14
-django-oauth-toolkit==2.2
-deprecation==2.1.0
-toml==0.10.2
-cerberus==1.3.4
+django==4.2
+django-cors-headers==4.4
+djangorestframework==3.15
+django-oauth-toolkit==2.4
+deprecation==2.1
+toml==0.10
+cerberus==1.3
 jinja2==3.1.4
 ijson==3.2
 toolz==0.12.0
@@ -37,7 +37,10 @@ duckdb-engine==0.12
 sqlglot==24.1
 polars==0.20
 sentry-sdk==2.3
-pybigwig==0.3.22
+pybigwig==0.3
+pyzstd==0.16
+gunicorn==22.0
+mysqlclient==2.2
 snakemake-minimal==7.32
 openjdk==8.0.312
 hadoop==3.1.2
