Split demo and vep annotators

--- a/external_demo_annotator/setup.cfg
+++ b/external_demo_annotator/setup.cfg
@@ -6,8 +6,8 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = vep_annotator/_version.py
-versionfile_build = vep_annotator/_version.py
+versionfile_source = demo_annotator/_version.py
+versionfile_build = demo_annotator/_version.py
 tag_prefix = ''
 parentdir_prefix = ''
 
