--- a/dae/dae/import_tools/tests/resources/vcf_import/import_config.yaml
+++ b/dae/dae/import_tools/tests/resources/vcf_import/import_config.yaml
@@ -8,11 +8,12 @@ input:
     files:
       - multivcf_[vc].vcf.gz
     chromosomes: 1,2,3
+    add_chrom_prefix: chr
 
 
 partition_description:
   region_bin:
-    chromosomes: 1, 2, 3, 4
+    chromosomes: chr1, chr2, chr3, chr4
     region_length: 100000000
   family_bin:
     family_bin_size: 10
