Support for schema2 mark for integration tests
This mark enables all available schema2 storage types.

--- a/dae/pytest.ini
+++ b/dae/pytest.ini
@@ -7,6 +7,13 @@ markers =
     gs_gcp: mark test to run only for gcp genotype storage
     gs_duckdb: mark test to run only for duckdb genotype storage
     gs_schema2: mark tests to run only for schema2 genotype storages
+    gs_parquet: mark tests to run only for schema2 parquet genotype storages
+    no_gs_impala: mark test to exclude impala genotype storage
+    no_gs_impala2: mark test to exclude impala2 genotype storage
+    no_gs_inmemory: mark test to exclude inmemory genotype storage
+    no_gs_gcp: mark test to exclude gcp genotype storage
+    no_gs_duckdb: mark test to exclude duckdb genotype storage
+    no_gs_parquet: mark tests to exclude schema2 parquet genotype storages
     grr_s3: mark test to run for S3 grr protocol
     grr_http: mark test to run for HTTP GRR protocol
     grr_inmemory: mark test to run for inmemory GRR protocol
