--- a/integration/local/data/gpf_instance.yaml
+++ b/integration/local/data/gpf_instance.yaml
@@ -9,8 +9,8 @@ genotype_storage:
   storages:
   - id: local_duckdb
     storage_type: duckdb2
-    studies_dir: "genotype_storage/local_duckdb"
-    base_dir: "%(wd)s"
+    db: local_duckdb/data_hg19_local.db
+    base_dir: "%(wd)s/genotype_storage"
 
 # annotation:
 #   conf_file: "annotation.yaml"
