Legacy DuckDb storage type changed to `duckdb_legacy`
Default duckdb storage for testing is `duckdb_parquet`.
Clean up and preparation for clean implementation of `duckdb`
genotype storage.

--- a/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
@@ -38,7 +38,8 @@ genotype_storage:
       storage_type: inmemory
 
     - id: test_duckdb_storage
-      storage_type: "duckdb"
+      storage_type: duckdb_parquet
+      base_dir: /tmp/test_duckdb_storage/studies
 
 remotes:
   - id: "TEST_REMOTE"
