--- a/integration/remote/data/gpf_instance.yaml
+++ b/integration/remote/data/gpf_instance.yaml
@@ -8,8 +8,7 @@ genotype_storage:
 
   storages:
   - id: remote_duckdb
-    storage_type: duckdb2
-    db: remote_duckdb/data_hg19_remote.db
+    storage_type: duckdb_parquet
     base_dir: "%(wd)s/genotype_storage"
 
 phenotype_data:
